--- a/index.html
+++ b/index.html
@@ -4,45 +4,59 @@
 <h1>Rythmable</h1>
 
 <p>
-    Title: Telo-Telo
-    Artist: 23.exe
-    Link: https://www.youtube.com/watch?v=nkStqnvLQzA
+    Title: Telo-Telo<br>
+    Artist: 23.exe<br>
+    Link: <a href="https://www.youtube.com/watch?v=nkStqnvLQzA">YouTube</a><br>
+    Submitted by YtzkA
 </p>
 
 <p>
-    Title: Plastic Love
-    Artist: Mariya Takeuchi
-    Link: https://www.youtube.com/watch?v=9Gj47G2e1Jc
+    Title: Plastic Love<br>
+    Artist: Mariya Takeuchi<br>
+    Link: <a href="https://www.youtube.com/watch?v=9Gj47G2e1Jc">YouTube</a><br>
+    Submitted by Lalio
 </p>
 
 <p>
-    Title: Never Gonna Give You Plastic Love
-    Artist: Rick Takeuchi
-    Link: https://www.youtube.com/watch?v=dM9zwZCOmjM
+    Title: Never Gonna Give You Plastic Love<br>
+    Artist: Rick Takeuchi<br>
+    Link: <a href="https://www.youtube.com/watch?v=dM9zwZCOmjM">YouTube</a><br>
+    Submitted by Lalio
 </p>
 
 <p>
-    Title: Spotlight
-    Artist: Jazztronik
-    Link: https://www.youtube.com/watch?v=hdRh-hxMAiI
+    Title: Spotlight<br>
+    Artist: Jazztronik<br>
+    Link: <a href="https://www.youtube.com/watch?v=hdRh-hxMAiI">YouTube</a><br>
+    Submitted by Lalio
 </p>
 
 <p>
-    Title: Never Gonna Give You Up
-    Artist: Rick Astley
-    Link: https://www.youtube.com/watch?v=dQw4w9WgXcQ
+    Title: Never Gonna Give You Up<br>
+    Artist: Rick Astley<br>
+    Link: <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">YouTube</a><br>
+    Submitted by MDAI
 </p>
 
 <p>
-    Title: 君はロックを聴かない
-    Artist: あいみょん
-    Link: https://www.youtube.com/watch?v=ARwVe1MYAUA
+    Title: 君はロックを聴かない<br>
+    Artist: あいみょん<br>
+    Link: <a href="https://www.youtube.com/watch?v=ARwVe1MYAUA">YouTube</a><br>
+    Submitted by Luna
 </p>
 
 <p>
-    Title: Omen
-    Artist: Disclosure
-    Link: https://www.youtube.com/watch?v=fB63ztKnGvo
+    Title: Omen<br>
+    Artist: Disclosure<br>
+    Link: <a href="https://www.youtube.com/watch?v=fB63ztKnGvo">YouTube</a><br>
+    Submitted by Lalio
+</p>
+
+<p>
+    Title: Where Are Ü Now<br>
+    Artist: Skrillex and Diplo<br>
+    Link: <a href="https://www.youtube.com/watch?v=nntGTK2Fhb0">YouTube</a><br>
+    Submitted by Lalio
 </p>
 
 </body>
