--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     Title: Never Gonna Give You Plastic Love<br>
     Artist: Rick Takeuchi<br>
     Link: <a href="https://www.youtube.com/watch?v=dM9zwZCOmjM">YouTube</a><br>
-    Submitted by Lalio
+    Submitted by MDAI
 </p>
 
 <p>
