--- a/index.html
+++ b/index.html
@@ -59,5 +59,26 @@
     Submitted by Lalio
 </p>
 
+<p>
+    Title: Empty Love<br>
+    Artist: GRACEY (ft. Ruel)<br>
+    Link: <a href="https://www.youtube.com/watch?v=9NifdqUAQnQ">YouTube</a><br>
+    Submitted by JNJJ
+</p>
+
+<p>
+    Title: This is How U Feel<br>
+    Artist: Loote<br>
+    Link: <a href="https://www.youtube.com/watch?v=LxgHmug_TPk">YouTube</a><br>
+    Submitted by JNJJ
+</p>
+
+<p>
+    Title: 내일이 오면 (feat. 기리보이 & BIG Naughty)<br>
+    Artist: 릴보이<br>
+    Link: <a href="https://www.youtube.com/watch?v=e0--itBVfa0">YouTube</a><br>
+    Submitted by JNJJ
+</p>
+
 </body>
 </html>
